Project

General

Profile

Actions

Bug #10101

closed

Zlib::GzipReader produce different outputs for different methods applied

Bug #10101: Zlib::GzipReader produce different outputs for different methods applied

Added by manzo (Rafael Manzo) about 12 years ago. Updated about 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.1.2p95 (2014-05-08 revision 45877) [x86_64-linux]
[ruby-core:64128]

Description

The methods read, readbyte and each_byte are producing different outputs. Comparing with the unziped file, only the result of readbyte is correct according to the size but comparing byte per byte with the original file sometimes gives differences at the same positions.

This part of the differences I couldn't reproduce in a way that I could share on the internet because the original file is a magnetic resonance image subject to confidentiality.

But fortunately I was able to reproduce the bug on input size. I've attached a script that illustrates the problem and here is the link for the file that I've used for the following sample output:

https://drive.google.com/file/d/0B3O0CbLN-q0TcmhGR0RGeWM2UHM/edit?usp=sharing

Sorry about the size, but I couldn't produce a smaller file.

[manzo@WALL-A gz_debug]$ ruby -v ruby 2.1.2p95 (2014-05-08 revision 45877) [x86_64-linux] [manzo@WALL-A gz_debug]$ ruby test1.rb sample.gz Size of read: 45102570 Size of each_byte: 4668 Size of readbyte: 45158752

I hope I'm right on this report and thank you a lot for your time!


Files

test1.rb (316 Bytes) test1.rb script that reproduces the errors manzo (Rafael Manzo), 07/31/2014 12:33 AM
Actions

Also available in: PDF Atom